comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
             <h1>titulo do site</h1>
         </header>
         <article>
-            <h2>artigo 1</h2>
-            <p>txt do artigo 1</p>
+            <h2>Flores</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsa quod ab corporis! Neque distinctio facere accusamus et iure vero reiciendis minima ea nostrum amet harum ipsa, dignissimos consectetur repudiandae?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error vel tempora cupiditate, soluta delectus ipsum officia dolorem sint, obcaecati praesentium perspiciatis voluptatibus mollitia ullam aliquam tempore quis! Laudantium, quisquam soluta.</p>
         </article>
         <article>
-            <h2>artigo 2</h2>
-            <p>txt do artigo 2</p>
+            <h2>Árvores</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quibusdam excepturi eveniet, ratione sed libero laudantium alias explicabo provident rerum blanditiis esse ullam et ipsum aspernatur nam nihil? Veritatis, vero.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, odit temporibus? Sunt pariatur, quos natus eos aspernatur voluptate consectetur aperiam ducimus dolore unde harum explicabo dolorem, temporibus deserunt odit cupiditate.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui dolorem obcaecati nostrum laboriosam sed amet accusamus delectus nesciunt libero et iste, consequuntur magni temporibus dicta error necessitatibus modi. Fugiat, saepe.</p>
         </article>
     </main>
 </body>
