--- a/index.html
+++ b/index.html
@@ -6,23 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titulo do site</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" href="stylesheet">
 </head>
 <body>
-    <main>
-        <header>
-            <h1>titulo do site</h1>
-        </header>
-        <article>
-            <h2>Flores</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsa quod ab corporis! Neque distinctio facere accusamus et iure vero reiciendis minima ea nostrum amet harum ipsa, dignissimos consectetur repudiandae?</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error vel tempora cupiditate, soluta delectus ipsum officia dolorem sint, obcaecati praesentium perspiciatis voluptatibus mollitia ullam aliquam tempore quis! Laudantium, quisquam soluta.</p>
-        </article>
-        <article>
-            <h2>Árvores</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quibusdam excepturi eveniet, ratione sed libero laudantium alias explicabo provident rerum blanditiis esse ullam et ipsum aspernatur nam nihil? Veritatis, vero.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, odit temporibus? Sunt pariatur, quos natus eos aspernatur voluptate consectetur aperiam ducimus dolore unde harum explicabo dolorem, temporibus deserunt odit cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui dolorem obcaecati nostrum laboriosam sed amet accusamus delectus nesciunt libero et iste, consequuntur magni temporibus dicta error necessitatibus modi. Fugiat, saepe.</p>
-        </article>
-    </main>
+    <div class="parent">
+    <div class="sidebar">
+
+        <div class="sidebar-pos">
+             <div class="img-sidebar">
+                 <img src="sarah-img.jpeg" alt="foto da Sarah">
+             </div> <!--imagem-->
+
+             <div class="menu">
+                 <a class="selector" href="#"> Sobre </a>
+                 <a href="#"> Experiencia </a>
+                 <a href="#"> Educação </a>
+             </div><!--menu-->
+
+        </div> 
+
+    </div> <!--sidebar-->
+
+    <div class="content">
+        <h2>Sarah Bernardes</h2>
+
+    </div> <!--content-->
+
+    </div><!--parent-->
+
 </body>
 </html>
