--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" href="stylesheet">
 </head>
@@ -28,7 +30,20 @@
     </div> <!--sidebar-->
 
     <div class="content">
-        <h2>Sarah Bernardes</h2>
+
+        <section class="descricao">
+            <h2>Sarah Bernardes</h2>
+            <h3>3542 BERRY STREET · CHEYENNE WELLS, CO 80810 · (317) 585-8468 · NAME@EMAIL.COM</h3>
+            <p>I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+
+            <div class="icons-social">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram-square"></i></a>
+              <a href=""><i class="fab fa-github-square"></i></a>
+            </div><!--icons-social-->
+
+        </section>
+        
 
     </div> <!--content-->
 
