--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
         <section class="descricao">
             <h2>Sarah Bernardes</h2>
-            <h3>3542 BERRY STREET · CHEYENNE WELLS, CO 80810 · (317) 585-8468 · NAME@EMAIL.COM</h3>
-            <p>I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+            <h3>Duque De Caxias · Rio De Janeiro · Brasil · +55 (21) 98657-9705 · sahbernardesdesign@gmail.com</h3>
+            <p> Estou cursando a faculdade de análise e desenvolvimento de sistemas pela UNINTER
+                Atualmente estou aprendendo python, javascript, php e MySQL
+                Procuro aprender e colaborar onde possa ser útil</p>
 
             <div class="icons-social">
               <a href=""><i class="fab fa-facebook-square"></i></a>
